# ai-agent-governance

./: .env.example  .gitignore  PRD.md  README.md  pyproject.toml
.cursor/: activity_log.md  architecture.md  changelog.md  instructions.md  roadmap.md
docs/: DEPLOYMENT.md
frontend/: README.md  index.html  package-lock.json
frontend/src/: App.tsx  Layout.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/pages/: AgentRunner.tsx  AuditLog.tsx  Dashboard.tsx  Documentation.tsx  EventStream.tsx  Policies.tsx
src/: __init__.py  config.py  main.py
src/api/: __init__.py  __main__.py  app.py  ws.py
src/clients/: __init__.py  anthropic_client.py  gemini_client.py
src/governance/: __init__.py  agent_runner.py  ari.py  conformance.py  schema.py  seed.py  storage.py
src/governance/policies/: __init__.py  base.py  memory_sanitizer.py  objective_alignment.py  write_approval.py
src/hardware/: __init__.py  gpio.py
src/mcp/: __init__.py  client.py
tests/: __init__.py  test_config.py  test_e2e.py
tests/api/: test_api.py
tests/clients/: __init__.py  test_anthropic_client.py  test_gemini_client.py
tests/governance/: __init__.py  test_agent_runner_integration.py  test_ari.py  test_conformance.py  test_policies.py  test_schema.py  test_storage.py
tests/hardware/: __init__.py  test_gpio.py
tests/mcp/: __init__.py  test_client.py
